adding forms and login/register services

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
+.login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+.login-form {
+    width: 100%;
+    max-width: 400px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgb(231, 227, 238);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.login-form .form-group {
+    margin-bottom: 20px;
+}
+.login-form .form-control {
+    border-radius: 0;
+}
+.login-form .btn {
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #00bcd4;
+    border-radius: 5px;
+}
+.login-form .btn:hover
+{
+    background-color: #00acc1;
+}
+.login-form a {
+    color: #00bcd4;
+}
+.login-form a:hover
+{
+    color: #00acc1;
+}
+.login-form form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+ 
+
