--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -4,20 +4,21 @@
             <h1>Login</h1>
         </div>
         <div class="login-body">
-            <form>
+            <form [formGroup]="form" (ngSubmit)="submit()">
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" formControlName="email" placeholder="Email">
+                    <input type="email" class="form-control" id="email" formControlName="email" placeholder="Email" />
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" formControlName="password" placeholder="Password">
+                    <input type="password" class="form-control" id="password" formControlName="password" placeholder="Password" />
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block">Login</button>
                 </div>
             </form>
+
+            <a [routerLink]="'/register'">Register</a>
         </div>
     </div>
-
 </div>
